--- a/osd_keymapconfig.desktop
+++ b/osd_keymapconfig.desktop
@@ -5,7 +5,7 @@ Icon=
 MiniIcon=
 Comment=
 Comment[de]=
-Terminal=0
+Terminal=false
 Name=OSD keymapconfig
 Name[de]=OSD keymapconfig
 Name[en]=OSD keymapconfig
