--- a/osd_tkosdshconfig.desktop
+++ b/osd_tkosdshconfig.desktop
@@ -5,7 +5,7 @@ Icon=
 MiniIcon=
 Comment=
 Comment[de]=
-Terminal=0
+Terminal=false
 Name=OSD tkosdshconfig
 Name[de]=OSD tkosdshconfig
 Name[en]=OSD tkosdshconfig
